--- a/test.html
+++ b/test.html
@@ -8,14 +8,14 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-sprotbrough.html">
 
-<meta name="description" content="Trusted gutter clearing, cleaning, repairs and replacement in Sprotbrough, Doncaster. Prevent leaks and damp. Call 07735 873694 for fast local service.">
+<meta name="description" content="Professional gutter services in Sprotbrough, Doncaster. Prevent leaks and water damage with cleaning, clearing, and repairs. Call 07735 873694 today.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{-webkit-text-size-adjust:100%;}
-body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.65;}
+body{margin:0;font-family:Arial,sans-serif;background:#f8f8f8;color:#222;line-height:1.7;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 30px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
@@ -34,6 +34,7 @@ button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
 .lightbox:target{display:flex;}
 footer{background:#000;color:#fff;text-align:center;padding:26px 15px;margin-top:40px;font-size:14px;}
 footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
+#quoteResult ul{padding-left:20px;}
 </style>
 
 <!-- LocalBusiness Schema -->
@@ -71,30 +72,11 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "@context": "https://schema.org",
 "@type": "FAQPage",
 "mainEntity": [
-{
-"@type": "Question",
-"name": "How often should gutters be cleaned?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Gutters should be cleaned at least twice a year, ideally in spring and autumn, or more frequently if there are nearby trees."
-}
-},
-{
-"@type": "Question",
-"name": "Do you repair or replace damaged gutters?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "We provide both repairs for minor damage and full replacement for gutters beyond repair."
-}
-},
-{
-"@type": "Question",
-"name": "Can I get a quote without a site visit?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, you can use our instant gutter quote calculator to get an estimate based on gutter length and selected services."
-}
-}
+{"@type":"Question","name":"How often should gutters be cleaned?","acceptedAnswer":{"@type":"Answer","text":"Gutters should be cleaned at least twice a year, ideally in spring and autumn, or more frequently if there are nearby trees."}},
+{"@type":"Question","name":"Do you repair or replace damaged gutters?","acceptedAnswer":{"@type":"Answer","text":"We provide both repairs for minor damage and full replacement for gutters beyond repair."}},
+{"@type":"Question","name":"Can I get a quote without a site visit?","acceptedAnswer":{"@type":"Answer","text":"Yes, you can use our instant gutter quote calculator to get an estimate based on gutter length and selected services."}},
+{"@type":"Question","name":"Are your services safe for homes with difficult access?","acceptedAnswer":{"@type":"Answer","text":"Yes, we use safe access equipment and trained professionals to handle high or awkward gutters safely."}},
+{"@type":"Question","name":"Do you offer emergency gutter services?","acceptedAnswer":{"@type":"Answer","text":"Yes, Home Repairs 4U offers emergency gutter clearing and repair services to prevent water damage when needed."}}
 ]
 }
 </script>
@@ -111,13 +93,11 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<h1>Gutter Clearing, Cleaning & Replacement in Sprotbrough, Doncaster</h1>
+<h1>Gutter Services in Sprotbrough, Doncaster</h1>
 
-<p>Home Repairs 4U provides reliable gutter services for properties throughout Sprotbrough. Our work focuses on keeping rainwater flowing safely away from your home, helping to prevent damp, leaks, and long-term structural issues.</p>
+<p>Home Repairs 4U offers professional gutter maintenance for homes and small businesses throughout Sprotbrough. Our services help protect your property from water damage, damp, and structural problems caused by blocked or damaged gutters.</p>
 
-<p>Blocked or damaged guttering is one of the most common causes of water damage in residential properties. When gutters overflow, water can soak brickwork, penetrate rooflines, and damage fascia boards. Regular maintenance helps avoid these problems and protects the overall condition of your property.</p>
-
-<p>We work on houses, bungalows, and small commercial buildings across the area. Every job is approached with care, using safe access methods and appropriate equipment to deliver consistent results without unnecessary disruption.</p>
+<p>We handle every job with care, using the right tools and safe access methods. Our team ensures gutters function efficiently all year round, preventing costly repairs in the future.</p>
 
 <h2>Instant Gutter Quote Calculator</h2>
 
@@ -127,17 +107,17 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <div class="form-row">
 <input type="checkbox" id="clearing">
-<label for="clearing">Gutter clearing (£5 per metre)</label>
+<label for="clearing">Gutter clearing</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="cleaning">
-<label for="cleaning">Gutter cleaning (£5 per metre)</label>
+<label for="cleaning">Gutter cleaning</label>
 </div>
 
 <div class="form-row">
 <input type="checkbox" id="replacement">
-<label for="replacement">Gutter replacement (£21.50 per metre)</label>
+<label for="replacement">Gutter replacement</label>
 </div>
 
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
@@ -168,28 +148,37 @@ items.length
 }
 </script>
 
-<h2>Our Gutter Services</h2>
+<h2>Why Gutter Maintenance Matters</h2>
+<p>Gutters channel rainwater away from your property. When they become blocked or damaged, water can seep into walls, roofs, and foundations, causing damp and structural problems. Regular maintenance ensures water flows freely, preventing damage and extending the life of your gutter system.</p>
+
+<h2>Our Services</h2>
 
 <h3>Gutter Clearing</h3>
-<p>Gutter clearing removes leaves, moss, and debris that build up over time. This is particularly important in areas like Sprotbrough where nearby trees and changing weather conditions can cause rapid blockages.</p>
+<p>We remove leaves, moss, and debris from your gutters to prevent blockages. This keeps water flowing properly and protects your home from leaks and damp.</p>
 <a href="#clearing-lightbox"><img src="/images/clearing-service.webp" alt="Gutter clearing service in Sprotbrough Doncaster" class="service-image"></a>
 <div id="clearing-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt="Gutter clearing service in Sprotbrough Doncaster"></a></div>
 
 <h3>Gutter Cleaning</h3>
-<p>External gutter cleaning improves the appearance of your property by removing algae, staining, and built-up grime. Clean gutters also dry more effectively, helping to extend their lifespan.</p>
+<p>Our cleaning service removes dirt, algae, and staining. Clean gutters not only look better but dry faster, reducing the risk of corrosion and extending their lifespan.</p>
 <a href="#cleaned-lightbox"><img src="/images/cleaned-gutters.webp" alt="Cleaned gutters in Sprotbrough Doncaster" class="service-image"></a>
 <div id="cleaned-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt="Cleaned gutters in Sprotbrough Doncaster"></a></div>
 
 <h3>Gutter Repairs & Replacement</h3>
-<p>Loose joints, leaks, and sagging sections can often be repaired if addressed early. Where guttering is damaged beyond repair, we provide full replacement using durable materials designed for long-term reliability.</p>
+<p>We repair minor damage such as leaks or sagging gutters. When a full replacement is needed, we use durable materials to ensure long-term protection for your home.</p>
 <a href="#replaced-lightbox"><img src="/images/replaced-gutter.webp" alt="Gutter replacement in Sprotbrough Doncaster" class="service-image"></a>
 <div id="replaced-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt="Gutter replacement in Sprotbrough Doncaster"></a></div>
 
-<h2>Why Gutter Maintenance Is Important</h2>
-<p>Well-maintained gutters help protect walls, foundations, and rooflines from water damage. Regular inspections and cleaning reduce the risk of unexpected repairs and help maintain the overall condition of your property.</p>
+<h2>Why Choose Home Repairs 4U?</h2>
+<ul>
+<li>Trusted locally in Sprotbrough and Doncaster</li>
+<li>Safe access and professional equipment</li>
+<li>Experienced and insured team</li>
+<li>Competitive pricing and transparent service</li>
+<li>Emergency services available</li>
+</ul>
 
-<h2>Book Gutter Services in Sprotbrough</h2>
-<p>If your gutters are overflowing, leaking, or showing signs of wear, Home Repairs 4U is here to help. We provide dependable gutter clearing, cleaning, repairs, and replacement throughout Sprotbrough and surrounding areas.</p>
+<h2>Book Your Service Today</h2>
+<p>Don’t wait for a small gutter problem to become a costly repair. Call Home Repairs 4U or use our calculator to get an instant estimate. We serve homes and businesses across Sprotbrough and surrounding areas.</p>
 
 <div style="text-align:center;margin:36px 0;">
 <a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
