--- a/local/gutter-services-carcroft.html
+++ b/local/gutter-services-carcroft.html
@@ -8,7 +8,7 @@
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-carcroft.html">
 
-<meta name="description" content="Reliable gutter clearing, cleaning, repairs and replacement in Carcroft, Doncaster. Protect your home from water damage. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Carcroft, Doncaster. Local, reliable service to protect your home. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
@@ -16,8 +16,6 @@
 <style>
 html{-webkit-text-size-adjust:100%;}
 body{margin:0;font-family:Arial,sans-serif;background:#f7f7f7;color:#222;line-height:1.8;}
-.skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden;}
-.skip-link:focus{position:static;width:auto;height:auto;padding:10px;background:#000;color:#fff;z-index:10000;}
 header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
@@ -30,19 +28,12 @@ input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:26px auto;border-radius:6px;}
-.lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
-.lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
-.lightbox:target{display:flex;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
-footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 #quoteResult ul{padding-left:22px;}
-.breadcrumbs{font-size:14px;margin-bottom:18px;}
-.breadcrumbs a{text-decoration:none;color:#27ae60;}
+.breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
 .breadcrumbs span{margin:0 6px;}
 </style>
-
-<a href="#main-content" class="skip-link">Skip to main content</a>
 
 <!-- Breadcrumb Schema -->
 <script type="application/ld+json">
@@ -74,8 +65,7 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "addressCountry":"GB"
 },
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Carcroft","Skellow","Adwick-le-Street","Doncaster"],
-"sameAs":["https://www.facebook.com/people/Handyman-services/61584395621256/"]
+"areaServed":["Carcroft","Skellow","Adwick-le-Street","Doncaster"]
 }
 </script>
 
@@ -83,35 +73,33 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 <body>
 
 <header>
-<img src="/images/logo.webp" alt="Home Repairs 4U company logo" class="logo" width="600" height="200">
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200">
 <br>
 <a href="/" style="font-size:20px;font-weight:600;color:#000;">Home</a><br>
-<a href="tel:+447735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">Call 07735 873694</a>
+<a href="tel:+447735873694" class="call-btn">Call 07735 873694</a>
 </header>
 
-<main id="main-content">
+<main>
 
 <nav class="breadcrumbs" aria-label="Breadcrumb">
-<a href="/">Home</a><span>›</span>
-<a href="/services/guttering.html">Guttering Services</a><span>›</span>
-<strong>Carcroft, Doncaster</strong>
+Home <span>›</span> Guttering Services <span>›</span> <strong>Carcroft, Doncaster</strong>
 </nav>
 
-<h1>Gutter Services for Properties in Carcroft, Doncaster</h1>
+<h1>Gutter Services in Carcroft, Doncaster</h1>
 
 <p>
-Home Repairs 4U provides professional gutter maintenance, repair, and replacement services throughout Carcroft. Gutters are designed to quietly protect your home by directing rainwater away from vulnerable areas. When they stop working correctly, the damage can spread quickly and often unnoticed.
+Home Repairs 4U provides dependable gutter services for homeowners and landlords in Carcroft. Gutters play a quiet but critical role in protecting your property, directing rainwater safely away from walls, roofs, and foundations. When they fail, the damage often develops slowly and unnoticed.
 </p>
 
 <p>
-Properties in Carcroft experience a mixture of seasonal rainfall, wind-blown debris, and general wear over time. Without proper maintenance, gutters can become blocked, leak at joints, or pull away from fixings. Our service is focused on prevention, reliability, and long-term protection.
+In Carcroft, many properties are exposed to seasonal rainfall, wind, and airborne debris. Over time, this can lead to blocked guttering, leaking joints, or sections pulling away from the roofline. Our service focuses on restoring proper function while helping you avoid unnecessary long-term repair costs.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
 
-<form id="quoteForm" aria-labelledby="calculator-heading">
+<form id="quoteForm">
 <label for="metres">Total gutter length (metres)</label>
-<input type="number" id="metres" min="1" step="0.1" required aria-required="true">
+<input type="number" id="metres" min="1" step="0.1" required>
 
 <div class="form-row">
 <input type="checkbox" id="clearing">
@@ -128,7 +116,7 @@ Properties in Carcroft experience a mixture of seasonal rainfall, wind-blown deb
 <label for="replacement">Gutter replacement</label>
 </div>
 
-<button type="button" onclick="calculateQuote()" class="call-btn" aria-label="Get gutter estimate">Get Estimate</button>
+<button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
 
 <div id="quoteResult" role="alert" aria-live="polite" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
@@ -156,55 +144,63 @@ items.length
 }
 </script>
 
-<!-- Content continues with unique narrative -->
-
-<h2>Why Gutter Maintenance Matters in Carcroft</h2>
+<h2>Local Gutter Maintenance for Carcroft Homes</h2>
 
 <p>
-Carcroft features a mixture of residential streets, gardens, and surrounding greenery. While this gives the area its character, it also increases the likelihood of leaves and organic debris entering gutter systems. Over time, this build-up restricts water flow and places additional strain on fixings and joints.
+Gutters are often overlooked until a problem becomes visible. Overflowing water, staining on walls, or damp patches inside the home can all be signs of underlying gutter issues. Regular inspection and maintenance help prevent these problems from escalating.
 </p>
 
 <p>
-When rainwater cannot drain properly, it finds alternative paths. This may include running down external walls, soaking fascia boards, or pooling near foundations. Addressing gutter issues early helps prevent these problems and preserves the overall structure of the property.
+Carcroft properties vary in age and construction, meaning gutter systems can differ significantly from one home to the next. Our approach is always tailored to the specific building, taking into account access, materials, and existing condition before any work begins.
 </p>
 
-<h2>Our Gutter Services in Carcroft</h2>
+<h2>Our Gutter Services</h2>
 
 <h3>Gutter Clearing</h3>
 <p>
-Clearing removes internal debris and restores proper water flow. This service is especially useful after autumn and winter when blockages are most common.
+Gutter clearing removes leaves, moss, and debris that restrict water flow. This is especially important after autumn and winter when blockages are most common.
 </p>
 
-<img src="/images/clearing-service.webp" alt="Gutter clearing carried out on a Carcroft property" class="service-image">
+<img src="/images/clearing-service.webp" alt="Gutter clearing work carried out on a property in Carcroft" class="service-image">
 
 <h3>Gutter Cleaning</h3>
 <p>
-External cleaning improves appearance and reduces moisture retention. Clean gutters dry faster and are less likely to suffer long-term surface damage.
+External gutter cleaning improves appearance while also helping gutters dry more efficiently. Clean surfaces are less likely to trap moisture, reducing the risk of deterioration over time.
 </p>
 
-<img src="/images/cleaned-gutters.webp" alt="Gutters cleaned on a residential home in Carcroft" class="service-image">
+<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a residential home in Carcroft, Doncaster" class="service-image">
 
 <h3>Gutter Repairs and Replacement</h3>
 <p>
-Where damage is localised, repairs can restore functionality. When guttering is beyond repair, replacement provides a durable, long-term solution.
+Minor issues such as loose joints or small leaks can often be repaired effectively. Where guttering has reached the end of its service life, replacement provides a long-term solution using modern, durable materials.
 </p>
 
-<img src="/images/replaced-gutter.webp" alt="New gutter replacement installed on a home in Carcroft" class="service-image">
+<img src="/images/replaced-gutter.webp" alt="New gutter replacement installed on a Carcroft home" class="service-image">
+
+<h2>Why Gutter Issues Shouldn’t Be Ignored</h2>
+
+<p>
+Water escaping from faulty gutters doesn’t just affect the exterior of your home. Over time, it can contribute to damp problems, timber decay, and even foundation movement. Addressing issues early helps maintain the overall health of the building.
+</p>
+
+<p>
+Regular gutter maintenance is one of the simplest ways to protect your property. It helps prevent unexpected repair costs and ensures rainwater is managed safely and efficiently.
+</p>
 
 <h2>Why Choose Home Repairs 4U in Carcroft</h2>
 
 <ul>
-<li>Local knowledge of Carcroft housing</li>
-<li>Clear, honest advice</li>
-<li>Safe access methods</li>
-<li>Transparent pricing</li>
-<li>Support for urgent issues</li>
+<li>Experience working with local property types</li>
+<li>Clear communication and honest advice</li>
+<li>Safe working practices</li>
+<li>Transparent estimates</li>
+<li>Reliable local service</li>
 </ul>
 
 <h2>Book Gutter Services in Carcroft</h2>
 
 <p>
-If your gutters are leaking, overflowing, or overdue for maintenance, Home Repairs 4U is ready to help. Use the calculator above or contact us directly to arrange a visit.
+If your gutters are blocked, leaking, or simply overdue for attention, Home Repairs 4U is ready to help. Use the calculator above for an instant estimate or get in touch to arrange a visit.
 </p>
 
 <div style="text-align:center;margin:40px 0;">
