--- a/local/gutter-services-bentley.html
+++ b/local/gutter-services-bentley.html
@@ -4,38 +4,53 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Gutter Clearing, Cleaning & Replacement in Bentley, Doncaster | Home Repairs 4U</title>
+<title>Gutter Clearing, Repairs & Replacement in Bentley, Doncaster | Home Repairs 4U</title>
 
 <link rel="canonical" href="https://homerepairs4u.com/local/gutter-services-bentley.html">
 
-<meta name="description" content="Trusted gutter clearing, cleaning, repairs and replacement in Bentley, Doncaster. Prevent water damage and protect your home. Call 07735 873694.">
+<meta name="description" content="Professional gutter clearing, cleaning, repairs and replacement in Bentley, Doncaster. Keep your property protected. Call 07735 873694.">
 
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="preload" as="image" href="/images/logo.webp">
 
 <style>
 html{-webkit-text-size-adjust:100%;}
-body{margin:0;font-family:Arial,sans-serif;background:#f7f7f7;color:#222;line-height:1.75;}
-header{background:#fff;padding:28px 14px;text-align:center;border-bottom:4px solid #27ae60;}
+body{margin:0;font-family:Arial,sans-serif;background:#f7f7f7;color:#222;line-height:1.8;}
+header{background:#fff;padding:26px 12px;text-align:center;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
 .call-btn{display:inline-block;margin-top:18px;padding:15px 32px;background:#000;color:#fff;font-size:19px;font-weight:bold;text-decoration:none;border-radius:6px;min-height:48px;}
 .call-btn:hover{background:#333;}
 main{max-width:1000px;margin:0 auto;background:#fff;padding:32px 22px;}
-h1,h2,h3,h4{color:#111;}
+h1,h2,h3{color:#111;}
 label{font-weight:bold;display:block;margin-bottom:6px;}
 input[type="number"]{width:100%;padding:12px;font-size:16px;margin-bottom:18px;}
 .form-row{display:flex;align-items:center;gap:14px;padding:12px 10px;margin-bottom:12px;}
 .form-row input{width:22px;height:22px;}
 button{cursor:pointer;min-height:48px;}
 button:focus,a:focus,input:focus{outline:3px solid #27ae60;outline-offset:2px;}
-.service-image{width:100%;max-width:900px;display:block;margin:26px auto;border-radius:6px;}
+.service-image{width:100%;max-width:900px;display:block;margin:28px auto;border-radius:6px;cursor:pointer;}
 .lightbox{display:none;position:fixed;z-index:9999;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.85);align-items:center;justify-content:center;}
 .lightbox img{max-width:95%;max-height:95%;border-radius:6px;box-shadow:0 0 25px #000;}
 .lightbox:target{display:flex;}
 footer{background:#000;color:#fff;text-align:center;padding:28px 15px;margin-top:40px;font-size:14px;}
-footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 #quoteResult ul{padding-left:22px;}
+.breadcrumbs{font-size:14px;margin-bottom:18px;color:#000;}
+.breadcrumbs span{margin:0 6px;}
+.internal-links a{color:#000;text-decoration:underline;}
 </style>
+
+<!-- Breadcrumb Schema -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"BreadcrumbList",
+"itemListElement":[
+{"@type":"ListItem","position":1,"name":"Home","item":"https://homerepairs4u.com/"},
+{"@type":"ListItem","position":2,"name":"Guttering Services","item":"https://homerepairs4u.com/services/guttering.html"},
+{"@type":"ListItem","position":3,"name":"Bentley, Doncaster","item":"https://homerepairs4u.com/local/gutter-services-bentley.html"}
+]
+}
+</script>
 
 <!-- LocalBusiness Schema -->
 <script type="application/ld+json">
@@ -43,7 +58,6 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "@context":"https://schema.org",
 "@type":"LocalBusiness",
 "name":"Home Repairs 4U",
-"image":"https://homerepairs4u.com/images/logo.webp",
 "url":"https://homerepairs4u.com/",
 "telephone":"+447735873694",
 "priceRange":"£50–£3000",
@@ -54,48 +68,8 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 "postalCode":"DN5",
 "addressCountry":"GB"
 },
-"geo":{
-"@type":"GeoCoordinates",
-"latitude":53.5858,
-"longitude":-1.1507
-},
 "openingHours":"Mo-Su 07:00-20:00",
-"areaServed":["Bentley","Arksey","Cusworth","Doncaster"],
-"sameAs":["https://www.facebook.com/people/Handyman-services/61584395621256/"]
-}
-</script>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context":"https://schema.org",
-"@type":"FAQPage",
-"mainEntity":[
-{
-"@type":"Question",
-"name":"How often should gutters be maintained on a typical Bentley property?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Most properties benefit from gutter maintenance once or twice a year, particularly after autumn and winter when debris build-up is more likely."
-}
-},
-{
-"@type":"Question",
-"name":"Can blocked gutters cause internal damp problems?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Yes. When gutters overflow, water can penetrate brickwork and rooflines, eventually leading to damp patches inside the property."
-}
-},
-{
-"@type":"Question",
-"name":"Is replacement always required for leaking gutters?",
-"acceptedAnswer":{
-"@type":"Answer",
-"text":"Not always. Many leaks can be repaired if the guttering is structurally sound. Replacement is recommended when damage is extensive."
-}
-}
-]
+"areaServed":["Bentley","Woodlands","Carcroft","Doncaster"]
 }
 </script>
 
@@ -111,14 +85,18 @@ footer a{color:#fff;text-decoration:none;padding:8px 12px;display:inline-block;}
 
 <main>
 
-<h1>Gutter Services for Homes and Businesses in Bentley, Doncaster</h1>
+<nav class="breadcrumbs" aria-label="Breadcrumb">
+Home <span>›</span> Guttering Services <span>›</span> <strong>Bentley, Doncaster</strong>
+</nav>
+
+<h1>Gutter Services in Bentley, Doncaster</h1>
 
 <p>
-Home Repairs 4U offers professional gutter maintenance, repair, and replacement services across Bentley. Gutters play a vital role in managing rainwater, yet they often receive attention only when problems begin to show. Leaking joints, overflowing sections, or sagging runs are early warning signs that should not be ignored.
+Home Repairs 4U offers trusted gutter clearing, cleaning, and replacement services for Bentley properties. Properly maintained gutters are essential for preventing water damage to roofs, walls, and foundations. Neglecting gutter care can quickly lead to leaks, staining, and structural issues.
 </p>
 
 <p>
-Bentley features a wide range of property styles, from older terraces to modern housing developments. Each type presents its own challenges when it comes to gutter performance. Our approach is tailored to the building, ensuring rainwater is channelled safely away without causing unnecessary disruption.
+Bentley properties face exposure to both urban and semi-rural elements. Falling leaves, moss, and seasonal rainfall can build up within guttering, so regular maintenance is crucial to preserve the home’s condition.
 </p>
 
 <h2>Instant Gutter Quote Calculator</h2>
@@ -145,7 +123,7 @@ Bentley features a wide range of property styles, from older terraces to modern 
 <button type="button" onclick="calculateQuote()" class="call-btn">Get Estimate</button>
 </form>
 
-<div id="quoteResult" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
+<div id="quoteResult" role="alert" aria-live="polite" style="margin-top:22px;font-size:18px;font-weight:bold;"></div>
 
 <script>
 function calculateQuote(){
@@ -170,62 +148,78 @@ items.length
 }
 </script>
 
-<h2>Understanding Gutter Problems in Bentley</h2>
+<h2>Gutter Maintenance in Bentley</h2>
 
 <p>
-Bentley’s environment exposes gutters to a combination of airborne debris, moss growth, and seasonal weather extremes. Over time, this causes blockages that restrict water flow. When water backs up, it places stress on joints and brackets, eventually leading to leaks or detachment.
+Gutters in Bentley homes endure a mix of urban and semi-rural weather exposure. Seasonal debris such as leaves, moss, and twigs can accumulate, creating blockages and affecting water flow. Regular maintenance ensures rainwater is safely carried away, protecting your home’s structure.
 </p>
 
 <p>
-Left untreated, these issues can escalate. Overflowing water can stain external walls, rot fascia boards, and seep into roof spaces. Addressing gutter problems early helps preserve the condition of the building and avoids more extensive repairs later.
+Frequent inspections can identify minor issues early—like small leaks or misaligned sections—reducing the risk of more serious damage over time.
 </p>
 
-<h2>Our Gutter Services Explained</h2>
+<h2>Our Gutter Services</h2>
 
 <h3>Gutter Clearing</h3>
 <p>
-Clearing removes internal debris such as leaves, silt, and moss. This restores proper water flow and reduces strain on the gutter system. Downpipes are also checked to ensure water drains away efficiently.
+Clearing removes leaves, moss, and debris from inside gutters, restoring proper drainage and preventing water overflow.
 </p>
 
 <a href="#clearing-lightbox">
-<img src="/images/clearing-service.webp" alt="Gutter clearing service on a Bentley Doncaster property" class="service-image">
+<img src="/images/clearing-service.webp" alt="Gutter clearing on a Bentley home" class="service-image">
 </a>
-<div id="clearing-lightbox" class="lightbox"><a href="#"><img src="/images/clearing-service.webp" alt="Gutter clearing service on a Bentley Doncaster property"></a></div>
+<div id="clearing-lightbox" class="lightbox">
+<a href="#"><img src="/images/clearing-service.webp" alt=""></a>
+</div>
 
 <h3>Gutter Cleaning</h3>
 <p>
-External gutter cleaning focuses on appearance and longevity. By removing surface grime and algae, gutters are able to dry more effectively, reducing the risk of long-term deterioration.
+External cleaning removes algae, staining, and grime, improving gutter efficiency and extending lifespan.
 </p>
 
-<a href="#cleaned-lightbox">
-<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a home in Bentley" class="service-image">
+<a href="#cleaning-lightbox">
+<img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a Bentley property" class="service-image">
 </a>
-<div id="cleaned-lightbox" class="lightbox"><a href="#"><img src="/images/cleaned-gutters.webp" alt="Cleaned gutters on a home in Bentley"></a></div>
+<div id="cleaning-lightbox" class="lightbox">
+<a href="#"><img src="/images/cleaned-gutters.webp" alt=""></a>
+</div>
 
-<h3>Gutter Repairs and Replacement</h3>
+<h3>Gutter Repairs & Replacement</h3>
 <p>
-Where possible, we carry out targeted repairs to fix leaks or loose sections. When guttering is worn beyond repair, full replacement provides a reliable and durable solution suited to the property.
+When guttering is damaged or worn, repair or replacement ensures long-term reliability using materials suited to local conditions.
 </p>
 
-<a href="#replaced-lightbox">
-<img src="/images/replaced-gutter.webp" alt="New gutter installation in Bentley Doncaster" class="service-image">
+<a href="#replacement-lightbox">
+<img src="/images/replaced-gutter.webp" alt="Gutter replacement installed on a Bentley home" class="service-image">
 </a>
-<div id="replaced-lightbox" class="lightbox"><a href="#"><img src="/images/replaced-gutter.webp" alt="New gutter installation in Bentley Doncaster"></a></div>
+<div id="replacement-lightbox" class="lightbox">
+<a href="#"><img src="/images/replaced-gutter.webp" alt=""></a>
+</div>
 
-<h2>Why Bentley Residents Choose Home Repairs 4U</h2>
+<h2>Nearby Areas We Serve</h2>
+
+<p class="internal-links">
+Home Repairs 4U also provides gutter services in neighboring areas including
+<a href="/local/gutter-services-woodlands.html">Woodlands</a>,
+<a href="/local/gutter-services-adwick-le-street.html">Adwick-le-Street</a>, and
+<a href="/local/gutter-services-hampole.html">Hampole</a>.
+This network allows prompt service and knowledge of local housing styles.
+</p>
+
+<h2>Why Choose Home Repairs 4U</h2>
 
 <ul>
-<li>Local experience with Bentley properties</li>
-<li>Honest advice based on condition, not sales pressure</li>
-<li>Safe access methods for all building types</li>
-<li>Clear pricing and flexible scheduling</li>
-<li>Support for urgent gutter issues</li>
+<li>Experience with local property types</li>
+<li>Clear, honest communication</li>
+<li>Safe and professional working methods</li>
+<li>Transparent estimates and pricing</li>
+<li>Reliable local service</li>
 </ul>
 
-<h2>Arrange Gutter Services in Bentley</h2>
+<h2>Book Gutter Services in Bentley</h2>
 
 <p>
-If your gutters are showing signs of wear, leaking, or overflowing, Home Repairs 4U is ready to assist. Use the calculator above for an instant estimate or get in touch to discuss your requirements.
+If your gutters are blocked, leaking, or showing signs of wear, Home Repairs 4U is ready to help. Use the calculator above for an instant estimate or contact us directly for a visit.
 </p>
 
 <div style="text-align:center;margin:40px 0;">
@@ -236,12 +230,6 @@ If your gutters are showing signs of wear, leaking, or overflowing, Home Repairs
 
 <footer>
 © Home Repairs 4U | Gutter Services Bentley, Doncaster
-<br>
-<a href="/services/guttering.html">Guttering</a>
-<a href="/services/fence-installation.html">Fencing</a>
-<a href="/services/upvc-restoration.html">uPVC Restoration</a>
-<br>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/">Facebook</a>
 </footer>
 
 </body>
